--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">template-android</string>
+
+    <string name="label_email">Email</string>
+    <string name="label_password">Password</string>
+    <string name="label_login">Login</string>
+
+    <string name="fmt_welcome">Welcome %1$s!</string>
+
+    <string name="err_invalid_credentials">Invalid credentials</string>
+    <string name="err_invalid_password">Invalid password</string>
+    <string name="err_invalid_email">Invalid email</string>
+    <string name="err_login_failure">Login failure</string>
 </resources>
